--- a/themes/hyde/static/css/poole.css
+++ b/themes/hyde/static/css/poole.css
@@ -60,7 +60,7 @@ html {
 
 body {
   color: #333e49;
-  background: linear-gradient(#f4f8fb, #fff);
+  background: #ecf2f7;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
