NXBT-1037: do not display analysis tab when there is no analysis

--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -7,7 +7,7 @@
   <div class="bench">
     <ul class="tabs" id="tabs">
       <li class="active">Result</li>
-      <li>Analysis</li>
+      {{ if isset $.Site.Data.analysis.suite .Key }}<li>Analysis</li>{{end}}
     </ul>
 
     <div class="tabs-content">
