--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,9 @@
 <footer>
   <ul>
-    <li><a href="http://www.nuxeo.com/">Visit Nuxeo.com</a></li>
-    <li><a href="http://www.nuxeo.com/downloads/">Download Nuxeo Platform</a></li>
-    <li><a href="https://doc.nuxeo.com">View Documentation</a></li>
+    <li><a href="//www.nuxeo.com/" target="blank">Visit Nuxeo.com</a></li>
+    <li><a href="//www.nuxeo.com/about/contact/" target="blank">Contact Us</a></li>
+    <li><a href="//www.nuxeo.com/blog/" target="blank">Nuxeo Blogs</a></li>
+    <li><a href="//university.nuxeo.io/" target="blank">Nuxeo University</a></li>
+    <li><a href="//doc.nuxeo.com/" target="blank">Nuxeo Documentation</a></li>
+    <li><a href="//www.nuxeo.com/careers/" target="blank">Careers</a></li>
 </footer>
