--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -112,9 +112,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/detail/">» Gatling</a>
       </dd>
     </dl>
 
@@ -143,9 +143,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/detail/">» Gatling</a>
       </dd>
     </dl>
 
@@ -172,9 +172,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/detail/">» Gatling</a>
       </dd>
     </dl>
 
@@ -201,9 +201,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/detail/">» Gatling</a>
       </dd>
     </dl>
 
@@ -232,9 +232,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/detail/">» Gatling</a>
       </dd>
     </dl>
 
@@ -263,9 +263,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/detail/">» Gatling</a>
       </dd>
     </dl>
 
@@ -292,9 +292,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/detail/">» Gatling</a>
       </dd>
     </dl>
 
@@ -310,9 +310,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/overview/">Overview and monitoring</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/overview/">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/detail/">Gatling</a>
+          href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/detail/">» Gatling</a>
       </dd>
     </dl>
 
