NXBT-1068: Make header menu responsive, simplify name in Benchmarks, add menu icon

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,18 +1,15 @@
+
 <div class="sidebar">
+  <label for="show-menu" class="show-menu">
+    <img src="{{ .Site.BaseURL }}images/menu.png" />
+  </label>
+  <input type="checkbox" id="show-menu" role="button">
   <ul class="sidebar-nav">
-    <li>
-      <ul>
-        <li id="milestone"><a href="{{ .Site.BaseURL }}milestone/">Milestones</a></li>
-        <li id="continuous"><a href="{{ .Site.BaseURL }}continuous/">Continuous</a></li>
-        <li id="misc"><a href="{{ .Site.BaseURL }}misc/">Misc</a></li>
-        <li id="workbench"><a href="{{ .Site.BaseURL }}workbench/">Workbench</a></li>
-      </ul>
-    </li>
-    <li id="infra">
-      <a href="{{ .Site.BaseURL }}infra/">Infrastructure</a>
-    </li>
-    <li id="scenarios">
-      <a href="{{ .Site.BaseURL }}scenarios/">Scenarios</a>
-    </li>
+    <li id="milestone"><a href="{{ .Site.BaseURL }}milestone/">Milestones</a></li>
+    <li id="continuous"><a href="{{ .Site.BaseURL }}continuous/">Continuous</a></li>
+    <li id="misc"><a href="{{ .Site.BaseURL }}misc/">Misc</a></li>
+    <li id="workbench"><a href="{{ .Site.BaseURL }}workbench/">Workbench</a></li>
+    <li id="infra"><a href="{{ .Site.BaseURL }}infra/">Infrastructure</a></li>
+    <li id="scenarios"><a href="{{ .Site.BaseURL }}scenarios/">Scenarios</a></li>
   </ul>
 </div>
