NXBT-1068: Fix small layout padding + small menu

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -161,7 +161,7 @@ a {
 
 @media (max-width: 810px) {
   .sidebar {
-    width: 30%;
+    width: 50%;
   }
   .sidebar label:hover {
     cursor: pointer;
@@ -221,7 +221,7 @@ a {
 
 .content.fullspace {
   padding: 0;
-  padding: 0;
+  padding: 4.1rem 0 0;
   max-width: none;
 }
 
