NXBT-1068: Fix small menu

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -161,7 +161,8 @@ a {
 
 @media (max-width: 810px) {
   .sidebar {
-    width: 50%;
+    width: 40%;
+    padding-left: 0;
   }
   .sidebar label:hover {
     cursor: pointer;
