--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -22,13 +22,16 @@
               <div><span>Create</span></div>
             </th>
             <th>
-              <div><span>Navigation</span></div>
+              <div><span>Read</span></div>
+            </th>
+            <th>
+              <div><span>Search</span></div>
             </th>
             <th>
               <div><span>Update</span></div>
             </th>
             <th>
-              <div><span>CRUD</span></div>
+              <div><span>CRU+Delete</span></div>
             </th>
             <th>
               <div><span>Reindexing</span></div>
