--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -50,7 +50,7 @@
           <div><span><a href="#update">Update</a></span></div>
         </th>
         <th>
-          <div><span><a href="#delete">CRU+Delete</a></span></div>
+          <div><span><a href="#delete">CRUD</a></span></div>
         </th>
         <th>
           <div><span><a href="#reindex">Reindexing</a></span></div>
