--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -31,7 +31,7 @@
               <div><span>Update</span></div>
             </th>
             <th>
-              <div><span>CRU+Delete</span></div>
+              <div><span>CRUD</span></div>
             </th>
             <th>
               <div><span>Reindexing</span></div>
